2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	  projects now use their file name as key in the parser service.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs: fixed
	  'Bug 427285 - Code Completion: Referenced projects not always shown
	  in code completion'.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Fixed special name method bug.

2008-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Dom/CompoundType.cs: Remove file must return
	  true when removing the last file of the class.
	* MonoDevelop.Projects.Dom/ParsedDocument.cs: Fix some warnings.
	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  ClassEntry.Name must hold the class name without namespace.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs: fixed 'fixed 'Bug 427734 -
	  Code Completion issues with enums'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed enum issue.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Removed debug
	  message/improved method resolve result.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/IMember.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs: fixed 'Bug 427649 -