@@ -1,5 +1,11 @@
 2008-09-22  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
+	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Changed
+	  method name
+
+2008-09-22  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
 	  MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
 	  projects now use their file name as key in the parser service.
